--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.25",
+    "react-notifications-component": "^3.0.3",
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
