--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@okta/okta-react": "^3.0.2",
     "@okta/okta-signin-widget": "^4.1.2",
     "antd": "^4.4.3",
-    "axios": "0.21.1",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "craco": "0.0.3",
     "craco-less": "^1.17.0",
@@ -22,6 +22,7 @@
     "json-web-token": "3.2.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
+    "node-sass": "^5.0.0",
     "plotly.js": "^1.54.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
@@ -31,7 +32,7 @@
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
@@ -89,7 +90,7 @@
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-notes": "^5.3.19",
     "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/react": "^4.0.2",
     "@storybook/storybook-deployer": "^2.8.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^10.2.1",
