--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.25",
     "react-icons": "^4.2.0",
+    "react-notifications-component": "^3.0.3",
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
